[package]
name = "LoadExc_client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"

# 升级至最新稳定 livekit 以避免老版本依赖冲突
livekit = "0.7.18"

# GStreamer 集成（核心、视频、appsrc/appsink）
gstreamer = { version = "0.23", features = ["v1_18"] }
gstreamer-video = { version = "0.23", features = ["v1_18"] }
gstreamer-app = { version = "0.23", features = ["v1_18"] }

